UIUX-623: fix cropping of funnel at bottom of chart
also updated funnel to use classStep = 2

--- a/sugarcrm/styleguide/less/sugar-specific/charts.less
+++ b/sugarcrm/styleguide/less/sugar-specific/charts.less
@@ -233,7 +233,8 @@ svg {
       margin: 8px;
     }
     .dashlet-options+.block .nv-chart,
-    .dashlet-options+.nv-chart {
+    .dashlet-options+.nv-chart,
+    .opportunity-pipeline-wrapper .nv-chart {
       height: 409px;
     }
     .opportunity-metrics-wrapper .nv-chart {
